// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageSelector component rendered component should match snapshot (cy) 1`] = `
<div>
  <div
    class="absolute right-5 top-5 max-xl:right-5 sm:right-8 text-left"
    data-headlessui-state=""
  >
    <div>
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="inline-flex focus:outline-black focus:outline-8 focus:ring-4 focus:ring-yellow-400 w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-50"
        data-headlessui-state=""
        id="language-button"
        type="button"
      >
        Iaith
        <svg
          aria-hidden="true"
          class="tabler-icon tabler-icon-world -mr-1 h-5 w-5 text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
          />
          <path
            d="M3.6 9h16.8"
          />
          <path
            d="M3.6 15h16.8"
          />
          <path
            d="M11.5 3a17 17 0 0 0 0 18"
          />
          <path
            d="M12.5 3a17 17 0 0 1 0 18"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`LanguageSelector component rendered component should match snapshot (en) 1`] = `
<div>
  <div
    class="absolute right-5 top-5 max-xl:right-5 sm:right-8 text-left"
    data-headlessui-state=""
  >
    <div>
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="inline-flex focus:outline-black focus:outline-8 focus:ring-4 focus:ring-yellow-400 w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-50"
        data-headlessui-state=""
        id="language-button"
        type="button"
      >
        Language
        <svg
          aria-hidden="true"
          class="tabler-icon tabler-icon-world -mr-1 h-5 w-5 text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
          />
          <path
            d="M3.6 9h16.8"
          />
          <path
            d="M3.6 15h16.8"
          />
          <path
            d="M11.5 3a17 17 0 0 0 0 18"
          />
          <path
            d="M12.5 3a17 17 0 0 1 0 18"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`LanguageSelector component rendered component should match snapshot (gd) 1`] = `
<div>
  <div
    class="absolute right-5 top-5 max-xl:right-5 sm:right-8 text-left"
    data-headlessui-state=""
  >
    <div>
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="inline-flex focus:outline-black focus:outline-8 focus:ring-4 focus:ring-yellow-400 w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-50"
        data-headlessui-state=""
        id="language-button"
        type="button"
      >
        Cànan
        <svg
          aria-hidden="true"
          class="tabler-icon tabler-icon-world -mr-1 h-5 w-5 text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
          />
          <path
            d="M3.6 9h16.8"
          />
          <path
            d="M3.6 15h16.8"
          />
          <path
            d="M11.5 3a17 17 0 0 0 0 18"
          />
          <path
            d="M12.5 3a17 17 0 0 1 0 18"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`LanguageSelector component should render the component with the correct links & elements (cy) 1`] = `
<div>
  <div
    class="absolute right-5 top-5 max-xl:right-5 sm:right-8 text-left"
    data-headlessui-state="open"
    data-open=""
  >
    <div>
      <button
        aria-controls="headlessui-menu-items-:rj:"
        aria-expanded="true"
        aria-haspopup="menu"
        class="inline-flex focus:outline-black focus:outline-8 focus:ring-4 focus:ring-yellow-400 w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-50"
        data-active=""
        data-headlessui-state="open active"
        data-open=""
        id="language-button"
        type="button"
      >
        Iaith
        <svg
          aria-hidden="true"
          class="tabler-icon tabler-icon-world -mr-1 h-5 w-5 text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
          />
          <path
            d="M3.6 9h16.8"
          />
          <path
            d="M3.6 15h16.8"
          />
          <path
            d="M11.5 3a17 17 0 0 0 0 18"
          />
          <path
            d="M12.5 3a17 17 0 0 1 0 18"
          />
        </svg>
      </button>
    </div>
    <div
      aria-labelledby="language-button"
      class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none transition ease-out duration-100 transform opacity-0 scale-95"
      data-headlessui-state="open"
      data-open=""
      id="headlessui-menu-items-:rj:"
      role="menu"
      style="--button-width: 0px;"
      tabindex="0"
    >
      <div
        class="langs"
        role="none"
      >
        <a
          class="text-gray-700 block px-4 py-2 text-sm rounded-md"
          data-headlessui-state=""
          data-testid="language-item"
          href="/en"
          id="headlessui-menu-item-:rk:"
          role="menuitem"
          tabindex="-1"
        >
          <p
            class="mb-0 py-2"
          >
            <span
              aria-hidden="true"
              class="mr-4 h-5 w-5 rounded-md fi fis fi-gb-eng"
            />
            English
          </p>
        </a>
        <a
          class="text-gray-700 block px-4 py-2 text-sm rounded-md"
          data-headlessui-state=""
          data-testid="language-item"
          href="/gd"
          id="headlessui-menu-item-:rl:"
          role="menuitem"
          tabindex="-1"
        >
          <p
            class="mb-0 py-2"
          >
            <span
              aria-hidden="true"
              class="mr-4 h-5 w-5 rounded-md fi fis fi-gb-sct"
            />
            Gaelic
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`LanguageSelector component should render the component with the correct links & elements (en) 1`] = `
<div>
  <div
    class="absolute right-5 top-5 max-xl:right-5 sm:right-8 text-left"
    data-headlessui-state="open"
    data-open=""
  >
    <div>
      <button
        aria-controls="headlessui-menu-items-:re:"
        aria-expanded="true"
        aria-haspopup="menu"
        class="inline-flex focus:outline-black focus:outline-8 focus:ring-4 focus:ring-yellow-400 w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-50"
        data-active=""
        data-headlessui-state="open active"
        data-open=""
        id="language-button"
        type="button"
      >
        Language
        <svg
          aria-hidden="true"
          class="tabler-icon tabler-icon-world -mr-1 h-5 w-5 text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
          />
          <path
            d="M3.6 9h16.8"
          />
          <path
            d="M3.6 15h16.8"
          />
          <path
            d="M11.5 3a17 17 0 0 0 0 18"
          />
          <path
            d="M12.5 3a17 17 0 0 1 0 18"
          />
        </svg>
      </button>
    </div>
    <div
      aria-labelledby="language-button"
      class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none transition ease-out duration-100 transform opacity-0 scale-95"
      data-headlessui-state="open"
      data-open=""
      id="headlessui-menu-items-:re:"
      role="menu"
      style="--button-width: 0px;"
      tabindex="0"
    >
      <div
        class="langs"
        role="none"
      >
        <a
          class="text-gray-700 block px-4 py-2 text-sm rounded-md"
          data-headlessui-state=""
          data-testid="language-item"
          href="/cy"
          id="headlessui-menu-item-:rf:"
          role="menuitem"
          tabindex="-1"
        >
          <p
            class="mb-0 py-2"
          >
            <span
              aria-hidden="true"
              class="mr-4 h-5 w-5 rounded-md fi fis fi-gb-wls"
            />
            Cymraeg
          </p>
        </a>
        <a
          class="text-gray-700 block px-4 py-2 text-sm rounded-md"
          data-headlessui-state=""
          data-testid="language-item"
          href="/gd"
          id="headlessui-menu-item-:rg:"
          role="menuitem"
          tabindex="-1"
        >
          <p
            class="mb-0 py-2"
          >
            <span
              aria-hidden="true"
              class="mr-4 h-5 w-5 rounded-md fi fis fi-gb-sct"
            />
            Gaelic
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`LanguageSelector component should render the component with the correct links & elements (gd) 1`] = `
<div>
  <div
    class="absolute right-5 top-5 max-xl:right-5 sm:right-8 text-left"
    data-headlessui-state="open"
    data-open=""
  >
    <div>
      <button
        aria-controls="headlessui-menu-items-:ro:"
        aria-expanded="true"
        aria-haspopup="menu"
        class="inline-flex focus:outline-black focus:outline-8 focus:ring-4 focus:ring-yellow-400 w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-50"
        data-active=""
        data-headlessui-state="open active"
        data-open=""
        id="language-button"
        type="button"
      >
        Cànan
        <svg
          aria-hidden="true"
          class="tabler-icon tabler-icon-world -mr-1 h-5 w-5 text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
          />
          <path
            d="M3.6 9h16.8"
          />
          <path
            d="M3.6 15h16.8"
          />
          <path
            d="M11.5 3a17 17 0 0 0 0 18"
          />
          <path
            d="M12.5 3a17 17 0 0 1 0 18"
          />
        </svg>
      </button>
    </div>
    <div
      aria-labelledby="language-button"
      class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none transition ease-out duration-100 transform opacity-0 scale-95"
      data-headlessui-state="open"
      data-open=""
      id="headlessui-menu-items-:ro:"
      role="menu"
      style="--button-width: 0px;"
      tabindex="0"
    >
      <div
        class="langs"
        role="none"
      >
        <a
          class="text-gray-700 block px-4 py-2 text-sm rounded-md"
          data-headlessui-state=""
          data-testid="language-item"
          href="/en"
          id="headlessui-menu-item-:rp:"
          role="menuitem"
          tabindex="-1"
        >
          <p
            class="mb-0 py-2"
          >
            <span
              aria-hidden="true"
              class="mr-4 h-5 w-5 rounded-md fi fis fi-gb-eng"
            />
            English
          </p>
        </a>
        <a
          class="text-gray-700 block px-4 py-2 text-sm rounded-md"
          data-headlessui-state=""
          data-testid="language-item"
          href="/cy"
          id="headlessui-menu-item-:rq:"
          role="menuitem"
          tabindex="-1"
        >
          <p
            class="mb-0 py-2"
          >
            <span
              aria-hidden="true"
              class="mr-4 h-5 w-5 rounded-md fi fis fi-gb-wls"
            />
            Cymraeg
          </p>
        </a>
      </div>
    </div>
  </div>
</div>
`;
